--- a/public/index.html
+++ b/public/index.html
@@ -41,10 +41,9 @@
     <div class="header-title">
       <a href="/" title="Adrian Lazaro"><span class="header-title-text">Adrián Lázaro</span></a><span class="header-subtitle"></span></div>
     <nav>
-      <ul class="menu"><li class="menu-item">
-              <a class="menu-link" href="/archives/"><i class="fa-solid fa-archive fa-sm" aria-hidden="true"></i> Archives</a></li><li class="menu-item">
-              <a class="menu-link" href="/categories/"><i class="fa-solid fa-folder-tree fa-sm" aria-hidden="true"></i> Categories</a></li><li class="menu-item">
-              <a class="menu-link" href="/tags/"><i class="fa-solid fa-tags fa-sm" aria-hidden="true"></i> Tags</a></li><li class="menu-item delimiter"></li><li class="menu-item theme-switch" role="button" aria-label="Cambia el tema" title="Cambia el tema"><i class="fa-solid fa-adjust" aria-hidden="true"></i></li></ul>
+      <ul class="menu"><li class="menu-item active">
+              <a class="menu-link" href="/">Inicio</a></li><li class="menu-item">
+              <a class="menu-link" href="/posts/">Artículos</a></li><li class="menu-item delimiter"></li><li class="menu-item theme-switch" role="button" aria-label="Cambia el tema" title="Cambia el tema"><i class="fa-solid fa-adjust" aria-hidden="true"></i></li></ul>
     </nav>
   </div>
 </header><header class="mobile animate__faster" id="header-mobile">
@@ -58,11 +57,11 @@
       </div>
     </div>
     <nav>
-      <ul class="menu" id="menu-mobile"><li class="menu-item"><a class="menu-link" href="/archives/"><i class="fa-solid fa-archive fa-sm" aria-hidden="true"></i> Archives</a></li><li class="menu-item"><a class="menu-link" href="/categories/"><i class="fa-solid fa-folder-tree fa-sm" aria-hidden="true"></i> Categories</a></li><li class="menu-item"><a class="menu-link" href="/tags/"><i class="fa-solid fa-tags fa-sm" aria-hidden="true"></i> Tags</a></li><li class="menu-item menu-system"></li>
+      <ul class="menu" id="menu-mobile"><li class="menu-item active"><a class="menu-link" href="/">Inicio</a></li><li class="menu-item"><a class="menu-link" href="/posts/">Artículos</a></li><li class="menu-item menu-system"></li>
       </ul>
     </nav>
   </div>
-</header><main class="fi-container"><div class="page home posts"><div class="home-profile"><div class="home-avatar"><a href="/archives/" title="Archives"><img src='/images/avatar.png' alt="Home avatar" height="96" width="96"></a></div><h1 class="home-title"></h1><p class="home-subtitle"><span class="d-none">Artículos y tonterías de un desarrollador Android</span><span class="typeit"><template>Artículos y tonterías de un desarrollador Android</template></span></p><div class="links"><a href="https://github.com/adrianlazaro8" title="GitHub" target="_blank" rel="external nofollow noopener noreferrer me"><i class="fa-brands fa-github-alt" aria-hidden="true"></i>
+</header><main class="fi-container"><div class="page home posts"><div class="home-profile"><div class="home-avatar"><a href="/" title="Inicio"><img src='/images/avatar.png' alt="Home avatar" height="96" width="96"></a></div><h1 class="home-title"></h1><p class="home-subtitle"><span class="d-none">Artículos y tonterías de un desarrollador Android</span><span class="typeit"><template>Artículos y tonterías de un desarrollador Android</template></span></p><div class="links"><a href="https://github.com/adrianlazaro8" title="GitHub" target="_blank" rel="external nofollow noopener noreferrer me"><i class="fa-brands fa-github-alt" aria-hidden="true"></i>
     </a><a href="https://linkedin.com/in/adlagar" title="LinkedIn" target="_blank" rel="external nofollow noopener noreferrer me"><i class="fa-brands fa-linkedin" aria-hidden="true"></i>
     </a></div></div>
 <article class="single summary" itemscope itemtype="http://schema.org/Article"><div class="featured-image-preview">
